# qimageblitz

./: CMakeLists.txt
blitz/: CMakeLists.txt  colors.cpp  convolve.cpp  histogram.cpp  qimageblitz.pc.cmake
test/: CMakeLists.txt  mainwindow.cpp
